Fix msvc compiling issue

std::isinf() and std:isnan() is supported only for msvc >= 2017.
For msvc < 2017 related definitions has been added to kdewin
version 0.6.3.

BUG:401448
FIXED-IN:5.0.3